--- a/style.css
+++ b/style.css
@@ -1,6 +1,35 @@
-.h1{
+h1{
     background-color: blanchedalmond;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bolder;
-    border-radius: 20%;
+    border-radius: 35px;
+    text-align: center;
+}
+
+img{
+    align-items:baseline;
+    width: 60%;
+    height: auto;
+    padding-left: 20%;
+}
+
+ul{
+    background-color: antiquewhite;
+    border-radius: 35px;
+    padding-left: 25%;
+}
+
+li{
+    
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    padding-left: 25%;
+    list-style-type: none;
+    font-weight: 900;
+    font-style: normal;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+    font-size: larger;
 }
