--- a/style.css
+++ b/style.css
@@ -14,9 +14,25 @@ img{
 }
 
 ul{
+    
     background-color: antiquewhite;
     border-radius: 35px;
     padding-left: 25%;
+}
+
+.listcont{
+    display: inline-block;
+    
+   
+    padding: 15px;
+    margin: 15px;
+    
+    background-color: antiquewhite;
+    border-radius: 15px;
+    border-top: 3px solid rgb(239, 179, 137);
+    border-left: 3px solid rgb(239, 179, 137);
+    border-bottom: 3px solid rgb(137, 174, 239);
+
 }
 
 li{
